--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,28 @@
   <script src="/fancy-index/script.js"></script>
+
+<H2>&nbsp;&nbsp;Material</H2>
+<ul>
+<li><a href="https://docs.google.com/spreadsheets/d/1-jYoz3AzP5mv8cstJHJ7rKVVPIN0xdUzfaCwdrBQ_sE/edit?usp=sharing">vdM Spreadsheet</a></li>
+</ul>
+
+<H2>&nbsp;&nbsp;Some talks (internal use)</H2>
+<ul>
+<li><a href="https://docs.google.com/presentation/d/1K5kdu1-FP74CnqVziASO3dsYli-nPwsVVwf4edJJTJo/edit?usp=sharing">vdM weekly 7.10.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/1-cYgzQgZa0l-LrmvDWwC6prA8XOw-f4faYcASUIFDRw/edit?usp=sharing">vdM weekly 21.10.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/18kzfCgRxMYnZBDW35frlw4H2T70S7RuthApbJZZ39P8/edit?usp=sharing">vdM weekly 18.11.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/1gYsf411xaP8B_9Jw03vwysaoh_YK1koplYxa4L6hzPw/edit?usp=sharing">vdM weekly 9.12.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/1De5buZ48xLdqz4CsC4FVkQSxehDpnMps0cukzLADAaU/edit?usp=sharing">vdM weekly 17.1.2022</a></li>
+<li><a href="https://docs.google.com/presentation/d/1bEg0WK9EdWU9XOOA60h6xnZEMEDUPaWtsRd55bj2eSo/edit?usp=sharing">vdM weekly 13.1.2022</a></li>
+<li><a href="https://docs.google.com/presentation/d/1N3mYTerGSR557XiwfWowKO6jceF35j96J5yXTc_7A3s/edit?usp=sharing">vdM weekly 10.3.2022</a></li>
+<li><a href="https://docs.google.com/presentation/d/1ouwis6IcaGy0UJSr-kMZo9gdIAWTX17G-Vx50Z7Y3u4/edit?usp=sharing">DPG 28.9.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/1uiQU-UcW50GhSKyH0tliiKxu9qtUB8JeHFThYNVYuB0/edit?usp=sharing">Online vdM, BRILweek 8.11.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/1_wfjge76IK0_qlCtsiKwm7qI7McBwgj62eEH3E4MS5Q/edit?usp=sharing">vdM for Run 3, BRILweek 10.11.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/1T58thVpaCQ_95DnWGtplFAdNzPh7osIHlzcMl-is7Cc/edit?usp=sharing">Beamtest results, DPG 23.11.2021</a></li>
+<li><a href="https://docs.google.com/presentation/d/1-cueNXSNn1awQJA-uKy0FbugDux6QsknQdxpvvIUhnU/edit?usp=sharing">vdM data storage and software, DPG 22.2.2022</a></li>
+<li><a href="https://docs.google.com/presentation/d/1h7qKKe_lQpUXf6EVuFiw0iGeAwDAd28G_aC4hhDWses/edit?usp=sharing">CapSigma time evolution, 14.3.2022</a></li>
+<li><a href="https://docs.google.com/presentation/d/1NS7gHvs0icrXgFqt5UlMiUBVCLThf-X6gp21-dOt5zg/edit?usp=sharing">List of TODOs</a></li>
+</ul>
+
+
 </body>
 </html>
