--- a/footer.html
+++ b/footer.html
@@ -21,6 +21,7 @@
 <li><a href="https://docs.google.com/presentation/d/1-cueNXSNn1awQJA-uKy0FbugDux6QsknQdxpvvIUhnU/edit?usp=sharing">vdM data storage and software, DPG 22.2.2022</a></li>
 <li><a href="https://docs.google.com/presentation/d/1h7qKKe_lQpUXf6EVuFiw0iGeAwDAd28G_aC4hhDWses/edit?usp=sharing">CapSigma time evolution, 14.3.2022</a></li>
 <li><a href="https://docs.google.com/presentation/d/1NS7gHvs0icrXgFqt5UlMiUBVCLThf-X6gp21-dOt5zg/edit?usp=sharing">List of TODOs</a></li>
+<li><a href="https://docs.google.com/presentation/d/1AWO4BIfwz6Hxnm2OCMW2g3MSAiLxW-6u8idC2SXCzpA/edit?usp=sharing">Calibration of drift tube + REMUS</a></li>
 </ul>
 
 
